Fixed overflow problem.

--- a/fixture_planner/static/css/fixture_planner.css
+++ b/fixture_planner/static/css/fixture_planner.css
@@ -267,6 +267,7 @@ th, td {
     grid-row: 1 / 3;
     grid-column: 2 / 2;
     background-color: #EEE;
+    overflow: hidden;
 }
 
 #fdr-team-names {
